[package]
name = "hex_bridge"
version = "0.1.0"
authors = ["weekleaf"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
futures-util = "0.3.31"
r2r = "0.9.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
